--- a/SistemaPasteleria/SistemaPasteleria.csproj
+++ b/SistemaPasteleria/SistemaPasteleria.csproj
@@ -112,6 +112,15 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102231717220_Initial-Migration.cs" />
+    <Compile Include="Migrations\202102231717220_Initial-Migration.designer.cs">
+      <DependentUpon>202102231717220_Initial-Migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202102231724086_Changed-Table-Name.cs" />
+    <Compile Include="Migrations\202102231724086_Changed-Table-Name.designer.cs">
+      <DependentUpon>202102231724086_Changed-Table-Name.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DBContext.cs" />
     <Compile Include="Models\MaterialReceta.cs" />
     <Compile Include="Models\ListaMaterial.cs" />
@@ -121,6 +130,12 @@
     <Compile Include="Models\Catalogo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Migrations\202102231717220_Initial-Migration.resx">
+      <DependentUpon>202102231717220_Initial-Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102231724086_Changed-Table-Name.resx">
+      <DependentUpon>202102231724086_Changed-Table-Name.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
