--- a/SistemaPasteleria/App.config
+++ b/SistemaPasteleria/App.config
@@ -18,7 +18,7 @@
   <connectionStrings>
 	  <add
 	name="Default"
-	connectionString="host=localhost;port=5432;database=pasteleria;user id=admin;password=admin"
+	connectionString="host=127.0.0.1;port=5432;database=pasteleria;user id=admin;password=admin"
 	providerName="Npgsql" />
   </connectionStrings>
   <runtime>
