Added materials and catalogo forms

--- a/SistemaPasteleria/App.config
+++ b/SistemaPasteleria/App.config
@@ -16,10 +16,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-	  <add
-	name="Default"
-	connectionString="host=127.0.0.1;port=5432;database=pasteleria;user id=admin;password=admin"
-	providerName="Npgsql" />
+	  <add name="Default" connectionString="host=127.0.0.1;port=5432;database=pasteleria;user id=admin;password=admin" providerName="Npgsql" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
