--- a/SistemaPasteleria/packages.config
+++ b/SistemaPasteleria/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CsvHelper" version="24.0.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
