--- a/SistemaPasteleria/SistemaPasteleria.csproj
+++ b/SistemaPasteleria/SistemaPasteleria.csproj
@@ -139,6 +139,12 @@
     <Compile Include="Forms\MaterialsForm.Designer.cs">
       <DependentUpon>MaterialsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\RecetaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RecetaForm.Designer.cs">
+      <DependentUpon>RecetaForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\202102231717220_Initial-Migration.cs" />
     <Compile Include="Migrations\202102231717220_Initial-Migration.designer.cs">
       <DependentUpon>202102231717220_Initial-Migration.cs</DependentUpon>
@@ -166,6 +172,9 @@
     <EmbeddedResource Include="Forms\MaterialsForm.resx">
       <DependentUpon>MaterialsForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RecetaForm.resx">
+      <DependentUpon>RecetaForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102231717220_Initial-Migration.resx">
       <DependentUpon>202102231717220_Initial-Migration.cs</DependentUpon>
     </EmbeddedResource>
@@ -184,6 +193,7 @@
     <None Include="packages.config" />
     <None Include="Properties\DataSources\SistemaPasteleria.Models.Catalogo.datasource" />
     <None Include="Properties\DataSources\SistemaPasteleria.Models.Material.datasource" />
+    <None Include="Properties\DataSources\SistemaPasteleria.Models.Receta.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
